# My-Diary

./: .gitattributes  .gitmessage.txt  LICENSE  README.md  main.py  pyproject.toml
OZ-mini-dairy/: .gitignore  .gitmessage.txt
app/db/: database.py
app/front/: index.html
app/frontend/: bookmarks.html  index.html
app/frontend/page/: bookmarks.html  dashboard.html  detail.html  diaries.html  diaries_detail.html
app/model/: diary.py  user.py
app/models/: bookmark.py  diary.py  question.py  quote.py
app/routers/: diary.py  question.py  quote.py  user.py
app/schemas/: bookmark.py  diary.py  question.py  quote.py  user.py
app/script/: insert_question.py  scrape_quotes.py
app/services/: auth.py
